agrego secciones a nosotros, en proceso

--- a/public/styles.css
+++ b/public/styles.css
@@ -659,6 +659,9 @@ html{
   margin-left: 0px;
   margin-right: 0px;
 }
+.mt-6{
+  margin-top: 1.5rem;
+}
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -667,6 +670,9 @@ html{
 }
 .mt-10{
   margin-top: 2.5rem;
+}
+.mb-4{
+  margin-bottom: 1rem;
 }
 .block{
   display: block;
@@ -707,9 +713,16 @@ html{
 .cursor-pointer{
   cursor: pointer;
 }
+.columns-1{
+  -moz-columns: 1;
+       columns: 1;
+}
 .columns-2{
   -moz-columns: 2;
        columns: 2;
+}
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-col{
   flex-direction: column;
@@ -1029,6 +1042,13 @@ html{
     font-weight: 400;
     line-height: 160%;
   }
+
+	.md\:p-xl{
+    font-family: Poppins, sans-serif;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 160%;
+  }
 	.md\:p-base{
     font-family: Poppins, sans-serif;
     font-size: 1rem;
@@ -1069,6 +1089,9 @@ html{
     -moz-columns: 20rem;
          columns: 20rem;
   }
+	.md\:items-start{
+    align-items: flex-start;
+  }
 }
 
 @media (min-width: 1024px){
@@ -1079,6 +1102,12 @@ html{
     text-transform: uppercase;
     line-height: 2rem;
   }
+	.lg\:mt-0{
+    margin-top: 0px;
+  }
+	.lg\:grid{
+    display: grid;
+  }
 	.lg\:w-\[45\%\]{
     width: 45%;
   }
@@ -1088,11 +1117,17 @@ html{
 	.lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+	.lg\:items-center{
+    align-items: center;
+  }
 	.lg\:gap-10{
     gap: 2.5rem;
   }
 	.lg\:px-28{
     padding-left: 7rem;
     padding-right: 7rem;
+  }
+	.lg\:text-left{
+    text-align: left;
   }
 }
