--- a/styles/main.css
+++ b/styles/main.css
@@ -182,6 +182,9 @@
 	--dark-900: 32, 32, 50;
 	--dark-950: 17, 17, 29;
 
+	--yellow-100: 255, 251, 240;
+	--yellow-200: 255, 242, 209;
+	--yellow-300: 255, 232, 173;
 	--yellow-400: 255, 222, 136;
 	--yellow-500: 255, 212, 100;
 	--yellow-600: 231, 184, 65;
