--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,600&display=swap'); */
 
-/*
-! tailwindcss v3.1.4 | MIT License | https://tailwindcss.com
-*/
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap');
+
+/* ! tailwindcss v3.1.4 | MIT License | https://tailwindcss.com */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -542,21 +542,21 @@ video {
   }
 }
 .title-h1-movil{
-  font-family: Lexend, sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 2rem;
   font-weight: 700;
   text-transform: uppercase;
   line-height: 2.5rem;
 }
 .title-h2-movil{
-  font-family: Lexend, sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 1.75rem;
   font-weight: 700;
   text-transform: uppercase;
   line-height: 2rem;
 }
 .title-h3-movil{
-  font-family: Lexend, sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 1rem;
   font-weight: 700;
   text-transform: uppercase;
@@ -787,21 +787,29 @@ html{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-700), var(--tw-border-opacity));
 }
+.border-dark-200{
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-200), var(--tw-border-opacity));
+}
+.bg-yellow-100{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--yellow-100), var(--tw-bg-opacity));
+}
 .bg-dark-200{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-200), var(--tw-bg-opacity));
 }
-.bg-dark-950{
+.bg-basic-white{
   --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
+  background-color: rgba(var(--white), var(--tw-bg-opacity));
 }
 .bg-basic-black{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--black), var(--tw-bg-opacity));
 }
-.bg-basic-white{
+.bg-dark-950{
   --tw-bg-opacity: 1;
-  background-color: rgba(var(--white), var(--tw-bg-opacity));
+  background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
 }
 .bg-dark-900{
   --tw-bg-opacity: 1;
@@ -895,6 +903,14 @@ html{
 }
 .italic{
   font-style: italic;
+}
+.text-yellow-900{
+  --tw-text-opacity: 1;
+  color: rgba(var(--yellow-900), var(--tw-text-opacity));
+}
+.text-yellow-800{
+  --tw-text-opacity: 1;
+  color: rgba(var(--yellow-800), var(--tw-text-opacity));
 }
 .text-basic-white{
   --tw-text-opacity: 1;
@@ -1018,21 +1034,21 @@ html{
 @media (min-width: 768px){
 
 	.md\:title-big-desktop{
-    font-family: Lexend, sans-serif;
+    font-family: Poppins, sans-serif;
     font-size: 3rem;
     font-weight: 700;
     text-transform: uppercase;
     line-height: 3.5rem;
   }
 	.md\:title-h1-desktop{
-    font-family: Lexend, sans-serif;
+    font-family: Poppins, sans-serif;
     font-size: 2.5rem;
     font-weight: 700;
     text-transform: uppercase;
     line-height: 3rem;
   }
 	.md\:title-h2-desktop{
-    font-family: Lexend, sans-serif;
+    font-family: Poppins, sans-serif;
     font-size: 2rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -1099,7 +1115,7 @@ html{
 
 @media (min-width: 1024px){
 	.lg\:title-h3-desktop{
-    font-family: Lexend, sans-serif;
+    font-family: Poppins, sans-serif;
     font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase;
