--- a/public/styles.css
+++ b/public/styles.css
@@ -568,6 +568,12 @@ video {
   font-weight: 400;
   line-height: 160%;
 }
+.p-base{
+  font-family: Poppins, sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+}
 .p-sm{
   font-family: Poppins, sans-serif;
   font-size: 0.875rem;
@@ -622,14 +628,22 @@ video {
   --tw-text-opacity: 1;
   color: rgba(var(--dark-700), var(--tw-text-opacity));
 }
+/* Card content*/
+.card-content{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 1rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-300), var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--white), var(--tw-bg-opacity));
+  padding: 1.5rem;
+}
 html{
   --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
-}
-.bg-fixed{
-  background-image: url('/images/bg-fixed.svg');
-  background-size: cover;
-  background-position: center;
+  background-color: rgba(var(--dark-100), var(--tw-bg-opacity));
 }
 .fixed{
   position: fixed;
@@ -674,6 +688,9 @@ html{
 .mb-4{
   margin-bottom: 1rem;
 }
+.mb-8{
+  margin-bottom: 2rem;
+}
 .block{
   display: block;
 }
@@ -694,6 +711,9 @@ html{
 }
 .h-10{
   height: 2.5rem;
+}
+.h-28{
+  height: 7rem;
 }
 .h-full{
   height: 100%;
@@ -724,6 +744,9 @@ html{
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .flex-col{
   flex-direction: column;
 }
@@ -745,6 +768,9 @@ html{
 .gap-8{
   gap: 2rem;
 }
+.gap-4{
+  gap: 1rem;
+}
 .gap-x-6{
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -761,14 +787,14 @@ html{
 .rounded{
   border-radius: 0.25rem;
 }
+.rounded-2xl{
+  border-radius: 1rem;
+}
 .rounded-full{
   border-radius: 9999px;
 }
 .rounded-xl{
   border-radius: 0.75rem;
-}
-.rounded-2xl{
-  border-radius: 1rem;
 }
 .border{
   border-width: 1px;
@@ -779,21 +805,25 @@ html{
 .border-solid{
   border-style: solid;
 }
+.border-dark-200{
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-200), var(--tw-border-opacity));
+}
 .border-dark-900{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-900), var(--tw-border-opacity));
+}
+.border-dark-300{
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-300), var(--tw-border-opacity));
 }
 .border-dark-700{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-700), var(--tw-border-opacity));
 }
-.border-dark-200{
-  --tw-border-opacity: 1;
-  border-color: rgba(var(--dark-200), var(--tw-border-opacity));
-}
-.bg-yellow-100{
+.bg-yellow-200{
   --tw-bg-opacity: 1;
-  background-color: rgba(var(--yellow-100), var(--tw-bg-opacity));
+  background-color: rgba(var(--yellow-200), var(--tw-bg-opacity));
 }
 .bg-dark-200{
   --tw-bg-opacity: 1;
@@ -819,6 +849,14 @@ html{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--primary-800), var(--tw-bg-opacity));
 }
+.bg-dark-300{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-300), var(--tw-bg-opacity));
+}
+.bg-primary-900{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--primary-900), var(--tw-bg-opacity));
+}
 .bg-opacity-90{
   --tw-bg-opacity: 0.9;
 }
@@ -841,9 +879,6 @@ html{
 .to-dark-950{
   --tw-gradient-to: rgba(var(--dark-950));
 }
-.bg-fixed{
-  background-attachment: fixed;
-}
 .fill-dark-700{
   fill: rgba(var(--dark-700));
 }
@@ -853,18 +888,22 @@ html{
 .fill-dark-100{
   fill: rgba(var(--dark-100));
 }
+.p-6{
+  padding: 1.5rem;
+}
 .p-4{
   padding: 1rem;
 }
 .p-2{
   padding: 0.5rem;
 }
-.p-6{
-  padding: 1.5rem;
-}
 .py-24{
   padding-top: 6rem;
   padding-bottom: 6rem;
+}
+.py-\[112px\]{
+  padding-top: 112px;
+  padding-bottom: 112px;
 }
 .py-12{
   padding-top: 3rem;
@@ -873,6 +912,12 @@ html{
 .py-16{
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+.pt-24{
+  padding-top: 6rem;
+}
+.pb-\[100px\]{
+  padding-bottom: 100px;
 }
 .pb-4{
   padding-bottom: 1rem;
@@ -883,11 +928,11 @@ html{
 .pt-10{
   padding-top: 2.5rem;
 }
+.pt-\[100px\]{
+  padding-top: 100px;
+}
 .pb-24{
   padding-bottom: 6rem;
-}
-.pt-24{
-  padding-top: 6rem;
 }
 .pb-10{
   padding-bottom: 2.5rem;
@@ -928,6 +973,14 @@ html{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-700), var(--tw-text-opacity));
 }
+.text-primary-500{
+  --tw-text-opacity: 1;
+  color: rgba(var(--primary-500), var(--tw-text-opacity));
+}
+.text-dark-600{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-600), var(--tw-text-opacity));
+}
 .text-dark-200{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-200), var(--tw-text-opacity));
@@ -939,6 +992,9 @@ html{
 .text-primary-100{
   --tw-text-opacity: 1;
   color: rgba(var(--primary-100), var(--tw-text-opacity));
+}
+.underline-offset-4{
+  text-underline-offset: 4px;
 }
 .opacity-40{
   opacity: 0.4;
@@ -1025,6 +1081,20 @@ html{
 .hover\:text-dark-100:hover{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-100), var(--tw-text-opacity));
+}
+
+.hover\:text-basic-white:hover{
+  --tw-text-opacity: 1;
+  color: rgba(var(--white), var(--tw-text-opacity));
+}
+
+.hover\:underline:hover{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.hover\:underline-offset-4:hover{
+  text-underline-offset: 4px;
 }
 
 .hover\:opacity-80:hover{
