--- a/styles/main.css
+++ b/styles/main.css
@@ -148,8 +148,14 @@
 		@apply button-sm text-dark-700;
 	}
 
+	/* Card content*/
+
+	.card-content {
+		@apply bg-basic-white border border-dark-300  p-6 rounded-2xl flex flex-col gap-4;
+	}
+
 	html {
-		@apply bg-dark-950;
+		@apply bg-dark-100;
 	}
 
 	.colums-photos {
