--- a/public/styles.css
+++ b/public/styles.css
@@ -557,20 +557,14 @@ video {
 }
 .title-h3-movil{
   font-family: Poppins, sans-serif;
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: 700;
   text-transform: uppercase;
-  line-height: 1.25rem;
+  line-height: 1.5rem;
 }
 .p-xl{
   font-family: Poppins, sans-serif;
   font-size: 1.2rem;
-  font-weight: 400;
-  line-height: 160%;
-}
-.p-base{
-  font-family: Poppins, sans-serif;
-  font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
 }
@@ -639,11 +633,78 @@ video {
   border-color: rgba(var(--dark-300), var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: rgba(var(--white), var(--tw-bg-opacity));
-  padding: 1.5rem;
+  padding: 1rem;
+}
+@media (min-width: 768px){
+
+  .card-content{
+    padding: 1.5rem;
+  }
+}
+.card-content-img{
+  height: 3.5rem;
+  width: 100%;
+}
+@media (min-width: 768px){
+
+  .card-content-img{
+    height: 7rem;
+  }
+}
+.card-content-title{
+  font-family: Poppins, sans-serif;
+  font-size: 1.25rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1.5rem;
+  text-align: center;
+}
+@media (min-width: 768px){
+	.card-content-title{
+    font-family: Poppins, sans-serif;
+    font-size: 1.75rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 2rem;
+  }
+}
+.card-content-body{
+  font-family: Poppins, sans-serif;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 160%;
+  padding-bottom: 2rem;
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-600), var(--tw-text-opacity));
+}
+@media (min-width: 768px){
+	.card-content-body{
+    font-family: Poppins, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+  }
 }
 html{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-100), var(--tw-bg-opacity));
+}
+.li-images{
+  font-family: Poppins, sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+}
+.li-images::before{
+  margin-right: 0.5rem;
+  display: inline-block;
+  height: 1.25rem;
+  width: 1.25rem;
+  background-size: contain;
+  vertical-align: text-top;
+  --tw-content: url("icons/check-alt.svg");
+  content: var(--tw-content);
 }
 .fixed{
   position: fixed;
@@ -654,11 +715,11 @@ html{
 .relative{
   position: relative;
 }
-.top-0{
-  top: 0px;
-}
 .left-0{
   left: 0px;
+}
+.top-0{
+  top: 0px;
 }
 .right-0{
   right: 0px;
@@ -673,11 +734,11 @@ html{
   margin-left: 0px;
   margin-right: 0px;
 }
-.mt-6{
-  margin-top: 1.5rem;
-}
 .mb-2{
   margin-bottom: 0.5rem;
+}
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 .mb-3{
   margin-bottom: 0.75rem;
@@ -685,11 +746,11 @@ html{
 .mt-10{
   margin-top: 2.5rem;
 }
+.mt-6{
+  margin-top: 1.5rem;
+}
 .mb-4{
   margin-bottom: 1rem;
-}
-.mb-8{
-  margin-bottom: 2rem;
 }
 .block{
   display: block;
@@ -703,6 +764,12 @@ html{
 .hidden{
   display: none;
 }
+.h-\[400px\]{
+  height: 400px;
+}
+.h-full{
+  height: 100%;
+}
 .h-16{
   height: 4rem;
 }
@@ -711,12 +778,6 @@ html{
 }
 .h-10{
   height: 2.5rem;
-}
-.h-28{
-  height: 7rem;
-}
-.h-full{
-  height: 100%;
 }
 .h-6{
   height: 1.5rem;
@@ -733,19 +794,12 @@ html{
 .cursor-pointer{
   cursor: pointer;
 }
-.columns-1{
-  -moz-columns: 1;
-       columns: 1;
-}
 .columns-2{
   -moz-columns: 2;
        columns: 2;
 }
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-col{
   flex-direction: column;
@@ -765,11 +819,14 @@ html{
 .gap-2{
   gap: 0.5rem;
 }
+.gap-4{
+  gap: 1rem;
+}
 .gap-8{
   gap: 2rem;
 }
-.gap-4{
-  gap: 1rem;
+.gap-1{
+  gap: 0.25rem;
 }
 .gap-x-6{
   -moz-column-gap: 1.5rem;
@@ -781,20 +838,20 @@ html{
 .overflow-hidden{
   overflow: hidden;
 }
-.rounded-lg{
-  border-radius: 0.5rem;
-}
 .rounded{
   border-radius: 0.25rem;
-}
-.rounded-2xl{
-  border-radius: 1rem;
 }
 .rounded-full{
   border-radius: 9999px;
 }
 .rounded-xl{
   border-radius: 0.75rem;
+}
+.rounded-2xl{
+  border-radius: 1rem;
+}
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 .border{
   border-width: 1px;
@@ -813,10 +870,6 @@ html{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-900), var(--tw-border-opacity));
 }
-.border-dark-300{
-  --tw-border-opacity: 1;
-  border-color: rgba(var(--dark-300), var(--tw-border-opacity));
-}
 .border-dark-700{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-700), var(--tw-border-opacity));
@@ -825,9 +878,17 @@ html{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--yellow-200), var(--tw-bg-opacity));
 }
+.bg-primary-100{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--primary-100), var(--tw-bg-opacity));
+}
 .bg-dark-200{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-200), var(--tw-bg-opacity));
+}
+.bg-primary-900{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--primary-900), var(--tw-bg-opacity));
 }
 .bg-basic-white{
   --tw-bg-opacity: 1;
@@ -849,32 +910,16 @@ html{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--primary-800), var(--tw-bg-opacity));
 }
-.bg-dark-300{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-300), var(--tw-bg-opacity));
-}
-.bg-primary-900{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--primary-900), var(--tw-bg-opacity));
-}
 .bg-opacity-90{
   --tw-bg-opacity: 0.9;
 }
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
-.from-dark-950{
-  --tw-gradient-from: rgba(var(--dark-950));
-  --tw-gradient-to: rgba(var(--dark-950), 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
 .from-dark-800{
   --tw-gradient-from: rgba(var(--dark-800));
   --tw-gradient-to: rgba(var(--dark-800), 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.to-dark-900{
-  --tw-gradient-to: rgba(var(--dark-900));
 }
 .to-dark-950{
   --tw-gradient-to: rgba(var(--dark-950));
@@ -888,14 +933,18 @@ html{
 .fill-dark-100{
   fill: rgba(var(--dark-100));
 }
-.p-6{
-  padding: 1.5rem;
-}
 .p-4{
   padding: 1rem;
 }
 .p-2{
   padding: 0.5rem;
+}
+.p-6{
+  padding: 1.5rem;
+}
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .py-24{
   padding-top: 6rem;
@@ -957,13 +1006,21 @@ html{
   --tw-text-opacity: 1;
   color: rgba(var(--yellow-800), var(--tw-text-opacity));
 }
-.text-basic-white{
+.text-primary-900{
   --tw-text-opacity: 1;
-  color: rgba(var(--white), var(--tw-text-opacity));
+  color: rgba(var(--primary-900), var(--tw-text-opacity));
 }
-.text-dark-500{
+.text-primary-800{
   --tw-text-opacity: 1;
-  color: rgba(var(--dark-500), var(--tw-text-opacity));
+  color: rgba(var(--primary-800), var(--tw-text-opacity));
+}
+.text-primary-500{
+  --tw-text-opacity: 1;
+  color: rgba(var(--primary-500), var(--tw-text-opacity));
+}
+.text-primary-100{
+  --tw-text-opacity: 1;
+  color: rgba(var(--primary-100), var(--tw-text-opacity));
 }
 .text-dark-400{
   --tw-text-opacity: 1;
@@ -973,13 +1030,13 @@ html{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-700), var(--tw-text-opacity));
 }
-.text-primary-500{
+.text-dark-500{
   --tw-text-opacity: 1;
-  color: rgba(var(--primary-500), var(--tw-text-opacity));
+  color: rgba(var(--dark-500), var(--tw-text-opacity));
 }
-.text-dark-600{
+.text-basic-white{
   --tw-text-opacity: 1;
-  color: rgba(var(--dark-600), var(--tw-text-opacity));
+  color: rgba(var(--white), var(--tw-text-opacity));
 }
 .text-dark-200{
   --tw-text-opacity: 1;
@@ -988,10 +1045,6 @@ html{
 .text-dark-100{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-100), var(--tw-text-opacity));
-}
-.text-primary-100{
-  --tw-text-opacity: 1;
-  color: rgba(var(--primary-100), var(--tw-text-opacity));
 }
 .underline-offset-4{
   text-underline-offset: 4px;
@@ -1073,9 +1126,9 @@ html{
   background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
 }
 
-.hover\:text-dark-950:hover{
+.hover\:text-basic-white:hover{
   --tw-text-opacity: 1;
-  color: rgba(var(--dark-950), var(--tw-text-opacity));
+  color: rgba(var(--white), var(--tw-text-opacity));
 }
 
 .hover\:text-dark-100:hover{
@@ -1083,18 +1136,9 @@ html{
   color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
 
-.hover\:text-basic-white:hover{
-  --tw-text-opacity: 1;
-  color: rgba(var(--white), var(--tw-text-opacity));
-}
-
 .hover\:underline:hover{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
-}
-
-.hover\:underline-offset-4:hover{
-  text-underline-offset: 4px;
 }
 
 .hover\:opacity-80:hover{
@@ -1162,6 +1206,9 @@ html{
     --tw-bg-opacity: 1;
     background-color: rgba(var(--yellow-600), var(--tw-bg-opacity));
   }
+	.md\:mb-8{
+    margin-bottom: 2rem;
+  }
 	.md\:block{
     display: block;
   }
@@ -1171,6 +1218,9 @@ html{
 	.md\:hidden{
     display: none;
   }
+	.md\:h-\[400\]{
+    height: 400;
+  }
 	.md\:h-16{
     height: 4rem;
   }
@@ -1178,8 +1228,18 @@ html{
     -moz-columns: 20rem;
          columns: 20rem;
   }
+	.md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
 	.md\:items-start{
     align-items: flex-start;
+  }
+	.md\:gap-8{
+    gap: 2rem;
+  }
+	.md\:py-24{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 }
 
