--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,9 @@
 		@apply font-headings font-bold text-[1.75rem] leading-[2rem] uppercase;
 	}
 	.title-h3-movil {
+		@apply font-headings font-bold text-[1.25rem] leading-[1.5rem] uppercase;
+	}
+	.title-h4-movil {
 		@apply font-headings font-bold text-[1rem] leading-[1.25rem] uppercase;
 	}
 
@@ -151,7 +154,19 @@
 	/* Card content*/
 
 	.card-content {
-		@apply bg-basic-white border border-dark-300  p-6 rounded-2xl flex flex-col gap-4;
+		@apply bg-basic-white border border-dark-300 p-4 md:p-6 rounded-2xl flex flex-col gap-4;
+	}
+
+	.card-content-img {
+		@apply w-full h-14 md:h-28;
+	}
+
+	.card-content-title {
+		@apply title-h3-movil md:title-h2-movil text-center;
+	}
+
+	.card-content-body {
+		@apply p-xs md:p-base text-dark-600 text-center pb-8;
 	}
 
 	html {
@@ -164,6 +179,10 @@
 
 	.bg-fixed {
 		@apply bg-[url('/images/bg-fixed.svg')] bg-cover bg-center;
+	}
+
+	.li-images {
+		@apply before:content-icon-list before:inline-block before:align-text-top before:mr-2 before:w-5 before:h-5 before:bg-contain p-base;
 	}
 }
 
