--- a/public/styles.css
+++ b/public/styles.css
@@ -574,6 +574,12 @@ video {
   font-weight: 400;
   line-height: 160%;
 }
+.p-xs{
+  font-family: Poppins, sans-serif;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 160%;
+}
 /* Buttons base */
 /* Buttons default */
 /* Buttons sm */
@@ -692,19 +698,37 @@ html{
 }
 .li-images{
   font-family: Poppins, sans-serif;
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-weight: 400;
   line-height: 160%;
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-800), var(--tw-text-opacity));
 }
 .li-images::before{
   margin-right: 0.5rem;
   display: inline-block;
-  height: 1.25rem;
-  width: 1.25rem;
+  height: 1rem;
+  width: 1rem;
   background-size: contain;
   vertical-align: text-top;
   --tw-content: url("icons/check-alt.svg");
   content: var(--tw-content);
+}
+@media (min-width: 768px){
+	.li-images{
+    font-family: Poppins, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+  }
+}
+@media (min-width: 1024px){
+
+  .li-images::before{
+    height: 1.25rem;
+    content: var(--tw-content);
+    width: 1.25rem;
+  }
 }
 .fixed{
   position: fixed;
@@ -729,6 +753,22 @@ html{
 }
 .bottom-16{
   bottom: 4rem;
+}
+.bottom-2{
+  bottom: 0.5rem;
+}
+.left-2{
+  left: 0.5rem;
+}
+.right-2{
+  right: 0.5rem;
+}
+.z-10{
+  z-index: 10;
+}
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 .mx-0{
   margin-left: 0px;
@@ -782,6 +822,9 @@ html{
 .h-6{
   height: 1.5rem;
 }
+.h-4{
+  height: 1rem;
+}
 .w-full{
   width: 100%;
 }
@@ -813,6 +856,9 @@ html{
 .justify-center{
   justify-content: center;
 }
+.gap-1{
+  gap: 0.25rem;
+}
 .gap-6{
   gap: 1.5rem;
 }
@@ -825,8 +871,8 @@ html{
 .gap-8{
   gap: 2rem;
 }
-.gap-1{
-  gap: 0.25rem;
+.gap-3{
+  gap: 0.75rem;
 }
 .gap-x-6{
   -moz-column-gap: 1.5rem;
@@ -886,6 +932,10 @@ html{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-200), var(--tw-bg-opacity));
 }
+.bg-\[\#EAEFE0\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 239 224 / var(--tw-bg-opacity));
+}
 .bg-primary-900{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--primary-900), var(--tw-bg-opacity));
@@ -906,12 +956,19 @@ html{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
 }
+.bg-dark-100{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-100), var(--tw-bg-opacity));
+}
 .bg-primary-800{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--primary-800), var(--tw-bg-opacity));
 }
 .bg-opacity-90{
   --tw-bg-opacity: 0.9;
+}
+.bg-opacity-80{
+  --tw-bg-opacity: 0.8;
 }
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -946,6 +1003,10 @@ html{
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
 .py-24{
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -954,13 +1015,29 @@ html{
   padding-top: 112px;
   padding-bottom: 112px;
 }
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+.px-24{
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .pt-24{
   padding-top: 6rem;
@@ -1017,6 +1094,14 @@ html{
 .text-primary-500{
   --tw-text-opacity: 1;
   color: rgba(var(--primary-500), var(--tw-text-opacity));
+}
+.text-dark-950{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-950), var(--tw-text-opacity));
+}
+.text-dark-900{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-900), var(--tw-text-opacity));
 }
 .text-primary-100{
   --tw-text-opacity: 1;
@@ -1206,6 +1291,10 @@ html{
     --tw-bg-opacity: 1;
     background-color: rgba(var(--yellow-600), var(--tw-bg-opacity));
   }
+	.md\:mx-6{
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
 	.md\:mb-8{
     margin-bottom: 2rem;
   }
@@ -1251,6 +1340,10 @@ html{
     text-transform: uppercase;
     line-height: 2rem;
   }
+	.lg\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 	.lg\:mt-0{
     margin-top: 0px;
   }
@@ -1263,18 +1356,51 @@ html{
 	.lg\:w-32{
     width: 8rem;
   }
+	.lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 	.lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 	.lg\:items-center{
     align-items: center;
   }
+	.lg\:justify-items-stretch{
+    justify-items: stretch;
+  }
+	.lg\:gap-6{
+    gap: 1.5rem;
+  }
 	.lg\:gap-10{
     gap: 2.5rem;
+  }
+	.lg\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
   }
 	.lg\:px-28{
     padding-left: 7rem;
     padding-right: 7rem;
+  }
+	.lg\:py-24{
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+	.lg\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+	.lg\:px-24{
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+	.lg\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+	.lg\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 	.lg\:text-left{
     text-align: left;
