--- a/public/styles.css
+++ b/public/styles.css
@@ -583,6 +583,20 @@ video {
 /* Buttons base */
 /* Buttons default */
 /* Buttons sm */
+.button-default-dark-sm{
+  font-family: Poppins, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 160%;
+  height: 2.5rem;
+  border-radius: 0.75rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgba(var(--white), var(--tw-text-opacity));
+}
 .button-default-yellow-sm{
   font-family: Poppins, sans-serif;
   font-size: 0.875rem;
@@ -798,6 +812,9 @@ html{
 .flex{
   display: flex;
 }
+.inline-flex{
+  display: inline-flex;
+}
 .grid{
   display: grid;
 }
@@ -824,6 +841,9 @@ html{
 }
 .h-6{
   height: 1.5rem;
+}
+.h-4{
+  height: 1rem;
 }
 .w-full{
   width: 100%;
@@ -1113,13 +1133,13 @@ html{
   --tw-text-opacity: 1;
   color: rgba(var(--primary-100), var(--tw-text-opacity));
 }
-.text-dark-400{
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-400), var(--tw-text-opacity));
-}
 .text-dark-700{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-700), var(--tw-text-opacity));
+}
+.text-dark-400{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-400), var(--tw-text-opacity));
 }
 .text-basic-white{
   --tw-text-opacity: 1;
@@ -1154,9 +1174,6 @@ html{
 }
 .duration-1000{
   transition-duration: 1000ms;
-}
-.duration-700{
-  transition-duration: 700ms;
 }
 .duration-300{
   transition-duration: 300ms;
@@ -1212,9 +1229,43 @@ html{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:scale-75:hover{
+  --tw-scale-x: .75;
+  --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-110:hover{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-100:hover{
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-105:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:border-dark-800:hover{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-800), var(--tw-border-opacity));
+}
+
+.hover\:border-dark-700:hover{
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-700), var(--tw-border-opacity));
+}
+
+.hover\:border-dark-600:hover{
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--dark-600), var(--tw-border-opacity));
 }
 
 .hover\:bg-dark-900:hover{
@@ -1222,14 +1273,29 @@ html{
   background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
 }
 
+.hover\:bg-dark-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-600), var(--tw-bg-opacity));
+}
+
+.hover\:bg-dark-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-700), var(--tw-bg-opacity));
+}
+
+.hover\:bg-dark-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-800), var(--tw-bg-opacity));
+}
+
+.hover\:bg-dark-950:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
+}
+
 .hover\:text-basic-white:hover{
   --tw-text-opacity: 1;
   color: rgba(var(--white), var(--tw-text-opacity));
-}
-
-.hover\:text-dark-100:hover{
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
 
 .hover\:text-dark-900:hover{
@@ -1237,14 +1303,14 @@ html{
   color: rgba(var(--dark-900), var(--tw-text-opacity));
 }
 
+.hover\:text-dark-100:hover{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-100), var(--tw-text-opacity));
+}
+
 .hover\:underline:hover{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
-}
-
-.hover\:decoration-solid:hover{
-  -webkit-text-decoration-style: solid;
-          text-decoration-style: solid;
 }
 
 .hover\:underline-offset-4:hover{
