--- a/public/styles.css
+++ b/public/styles.css
@@ -615,21 +615,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgba(var(--yellow-600), var(--tw-bg-opacity));
 }
-.button-ghost-dark-sm{
-  font-family: Poppins, sans-serif;
-  font-size: 0.875rem;
-  font-weight: 500;
-  line-height: 160%;
-  height: 2.5rem;
-  border-radius: 0.75rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  border-width: 2px;
-  --tw-border-opacity: 1;
-  border-color: rgba(var(--dark-300), var(--tw-border-opacity));
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-700), var(--tw-text-opacity));
-}
 .button-link-dark-sm{
   font-family: Poppins, sans-serif;
   font-size: 0.875rem;
@@ -744,6 +729,17 @@ html{
     width: 1.25rem;
   }
 }
+.sr-only{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
 .fixed{
   position: fixed;
 }
@@ -788,6 +784,10 @@ html{
   margin-left: 0px;
   margin-right: 0px;
 }
+.mx-20{
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -805,6 +805,12 @@ html{
 }
 .mb-4{
   margin-bottom: 1rem;
+}
+.ml-10{
+  margin-left: 2.5rem;
+}
+.mr-10{
+  margin-right: 2.5rem;
 }
 .block{
   display: block;
@@ -836,14 +842,17 @@ html{
 .h-8{
   height: 2rem;
 }
+.h-4{
+  height: 1rem;
+}
 .h-10{
   height: 2.5rem;
 }
 .h-6{
   height: 1.5rem;
 }
-.h-4{
-  height: 1rem;
+.h-20{
+  height: 5rem;
 }
 .w-full{
   width: 100%;
@@ -853,6 +862,25 @@ html{
 }
 .w-24{
   width: 6rem;
+}
+.w-6{
+  width: 1.5rem;
+}
+.flex-shrink-0{
+  flex-shrink: 0;
+}
+.scale-95{
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-100{
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer{
   cursor: pointer;
@@ -873,8 +901,14 @@ html{
 .items-center{
   align-items: center;
 }
+.items-baseline{
+  align-items: baseline;
+}
 .justify-center{
   justify-content: center;
+}
+.justify-between{
+  justify-content: space-between;
 }
 .gap-4{
   gap: 1rem;
@@ -885,14 +919,14 @@ html{
 .gap-1{
   gap: 0.25rem;
 }
+.gap-3{
+  gap: 0.75rem;
+}
 .gap-2{
   gap: 0.5rem;
 }
 .gap-8{
   gap: 2rem;
-}
-.gap-3{
-  gap: 0.75rem;
 }
 .gap-x-6{
   -moz-column-gap: 1.5rem;
@@ -900,6 +934,16 @@ html{
 }
 .gap-y-2{
   row-gap: 0.5rem;
+}
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-1 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 .overflow-hidden{
   overflow: hidden;
@@ -919,6 +963,9 @@ html{
 .rounded-lg{
   border-radius: 0.5rem;
 }
+.rounded-md{
+  border-radius: 0.375rem;
+}
 .border{
   border-width: 1px;
 }
@@ -931,10 +978,6 @@ html{
 .border-dark-200{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-200), var(--tw-border-opacity));
-}
-.border-dark-900{
-  --tw-border-opacity: 1;
-  border-color: rgba(var(--dark-900), var(--tw-border-opacity));
 }
 .border-dark-700{
   --tw-border-opacity: 1;
@@ -1051,6 +1094,18 @@ html{
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
 .pt-24{
   padding-top: 6rem;
 }
@@ -1084,11 +1139,35 @@ html{
 .pt-32{
   padding-top: 8rem;
 }
+.pt-2{
+  padding-top: 0.5rem;
+}
+.pb-3{
+  padding-bottom: 0.75rem;
+}
 .text-center{
   text-align: center;
 }
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
 .font-semibold{
   font-weight: 600;
+}
+.font-bold{
+  font-weight: 700;
+}
+.font-medium{
+  font-weight: 500;
 }
 .italic{
   font-style: italic;
@@ -1137,21 +1216,21 @@ html{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-700), var(--tw-text-opacity));
 }
-.text-dark-400{
+.text-dark-100{
   --tw-text-opacity: 1;
-  color: rgba(var(--dark-400), var(--tw-text-opacity));
+  color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
 .text-basic-white{
   --tw-text-opacity: 1;
   color: rgba(var(--white), var(--tw-text-opacity));
 }
+.text-dark-400{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-400), var(--tw-text-opacity));
+}
 .text-dark-200{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-200), var(--tw-text-opacity));
-}
-.text-dark-100{
-  --tw-text-opacity: 1;
-  color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
 .underline-offset-4{
   text-underline-offset: 4px;
@@ -1161,6 +1240,17 @@ html{
 }
 .opacity-60{
   opacity: 0.6;
+}
+.opacity-0{
+  opacity: 0;
+}
+.opacity-100{
+  opacity: 1;
+}
+.shadow-sm{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1172,17 +1262,26 @@ html{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.duration-300{
+  transition-duration: 300ms;
+}
 .duration-1000{
   transition-duration: 1000ms;
 }
-.duration-300{
-  transition-duration: 300ms;
+.duration-100{
+  transition-duration: 100ms;
+}
+.duration-75{
+  transition-duration: 75ms;
+}
+.ease-in{
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.ease-in{
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+.ease-out{
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 :root {
@@ -1223,74 +1322,25 @@ html{
 	--black: 0, 0, 0;
 }
 
-.hover\:scale-125:hover{
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-75:hover{
-  --tw-scale-x: .75;
-  --tw-scale-y: .75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-110:hover{
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-100:hover{
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:scale-105:hover{
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:border-dark-800:hover{
-  --tw-border-opacity: 1;
-  border-color: rgba(var(--dark-800), var(--tw-border-opacity));
-}
-
-.hover\:border-dark-700:hover{
-  --tw-border-opacity: 1;
-  border-color: rgba(var(--dark-700), var(--tw-border-opacity));
-}
-
-.hover\:border-dark-600:hover{
-  --tw-border-opacity: 1;
-  border-color: rgba(var(--dark-600), var(--tw-border-opacity));
-}
-
-.hover\:bg-dark-900:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-900), var(--tw-bg-opacity));
-}
-
-.hover\:bg-dark-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-600), var(--tw-bg-opacity));
-}
-
-.hover\:bg-dark-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-700), var(--tw-bg-opacity));
-}
-
-.hover\:bg-dark-800:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--dark-800), var(--tw-bg-opacity));
+.hover\:scale-125:hover{
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-dark-950:hover{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
+}
+
+.hover\:font-black:hover{
+  font-weight: 900;
 }
 
 .hover\:text-basic-white:hover{
@@ -1319,6 +1369,29 @@ html{
 
 .hover\:opacity-80:hover{
   opacity: 0.8;
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring-2:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-offset-2:focus{
+  --tw-ring-offset-width: 2px;
+}
+
+@media (min-width: 640px){
+
+  .sm\:px-3{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
 }
 
 @media (min-width: 768px){
