menu responsive working

--- a/public/styles.css
+++ b/public/styles.css
@@ -541,6 +541,15 @@ video {
     padding-right: 1.5rem;
   }
 }
+.pt-header-fix{
+  padding-top: 4rem;
+}
+@media (min-width: 768px){
+
+  .pt-header-fix{
+    padding-top: 6rem;
+  }
+}
 .title-h1-movil{
   font-family: Poppins, sans-serif;
   font-size: 2rem;
@@ -773,6 +782,9 @@ html{
 .right-2{
   right: 0.5rem;
 }
+.z-30{
+  z-index: 30;
+}
 .z-10{
   z-index: 10;
 }
@@ -783,10 +795,6 @@ html{
 .mx-0{
   margin-left: 0px;
   margin-right: 0px;
-}
-.mx-20{
-  margin-left: 5rem;
-  margin-right: 5rem;
 }
 .mb-2{
   margin-bottom: 0.5rem;
@@ -805,12 +813,6 @@ html{
 }
 .mb-4{
   margin-bottom: 1rem;
-}
-.ml-10{
-  margin-left: 2.5rem;
-}
-.mr-10{
-  margin-right: 2.5rem;
 }
 .block{
   display: block;
@@ -851,9 +853,6 @@ html{
 .h-6{
   height: 1.5rem;
 }
-.h-20{
-  height: 5rem;
-}
 .w-full{
   width: 100%;
 }
@@ -862,12 +861,6 @@ html{
 }
 .w-24{
   width: 6rem;
-}
-.w-6{
-  width: 1.5rem;
-}
-.flex-shrink-0{
-  flex-shrink: 0;
 }
 .scale-95{
   --tw-scale-x: .95;
@@ -901,14 +894,8 @@ html{
 .items-center{
   align-items: center;
 }
-.items-baseline{
-  align-items: baseline;
-}
 .justify-center{
   justify-content: center;
-}
-.justify-between{
-  justify-content: space-between;
 }
 .gap-4{
   gap: 1rem;
@@ -922,11 +909,11 @@ html{
 .gap-3{
   gap: 0.75rem;
 }
-.gap-2{
-  gap: 0.5rem;
-}
 .gap-8{
   gap: 2rem;
+}
+.gap-2{
+  gap: 0.5rem;
 }
 .gap-x-6{
   -moz-column-gap: 1.5rem;
@@ -934,16 +921,6 @@ html{
 }
 .gap-y-2{
   row-gap: 0.5rem;
-}
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-1 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 .overflow-hidden{
   overflow: hidden;
@@ -962,9 +939,6 @@ html{
 }
 .rounded-lg{
   border-radius: 0.5rem;
-}
-.rounded-md{
-  border-radius: 0.375rem;
 }
 .border{
   border-width: 1px;
@@ -1082,6 +1056,10 @@ html{
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 .py-\[112px\]{
   padding-top: 112px;
   padding-bottom: 112px;
@@ -1094,20 +1072,8 @@ html{
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.pt-24{
-  padding-top: 6rem;
+.pt-16{
+  padding-top: 4rem;
 }
 .pb-\[100px\]{
   padding-bottom: 100px;
@@ -1133,41 +1099,20 @@ html{
 .pb-24{
   padding-bottom: 6rem;
 }
+.pt-24{
+  padding-top: 6rem;
+}
 .pb-10{
   padding-bottom: 2.5rem;
 }
 .pt-32{
   padding-top: 8rem;
 }
-.pt-2{
-  padding-top: 0.5rem;
-}
-.pb-3{
-  padding-bottom: 0.75rem;
-}
 .text-center{
   text-align: center;
 }
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
 .font-semibold{
   font-weight: 600;
-}
-.font-bold{
-  font-weight: 700;
-}
-.font-medium{
-  font-weight: 500;
 }
 .italic{
   font-style: italic;
@@ -1235,22 +1180,21 @@ html{
 .underline-offset-4{
   text-underline-offset: 4px;
 }
-.opacity-40{
-  opacity: 0.4;
-}
-.opacity-60{
-  opacity: 0.6;
-}
 .opacity-0{
   opacity: 0;
 }
 .opacity-100{
   opacity: 1;
 }
-.shadow-sm{
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-40{
+  opacity: 0.4;
+}
+.opacity-60{
+  opacity: 0.6;
+}
+.drop-shadow-xl{
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1265,23 +1209,23 @@ html{
 .duration-300{
   transition-duration: 300ms;
 }
-.duration-1000{
-  transition-duration: 1000ms;
-}
 .duration-100{
   transition-duration: 100ms;
 }
 .duration-75{
   transition-duration: 75ms;
 }
+.duration-1000{
+  transition-duration: 1000ms;
+}
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 .ease-out{
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 :root {
@@ -1339,10 +1283,6 @@ html{
   background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
 }
 
-.hover\:font-black:hover{
-  font-weight: 900;
-}
-
 .hover\:text-basic-white:hover{
   --tw-text-opacity: 1;
   color: rgba(var(--white), var(--tw-text-opacity));
@@ -1369,29 +1309,6 @@ html{
 
 .hover\:opacity-80:hover{
   opacity: 0.8;
-}
-
-.focus\:outline-none:focus{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:ring-2:focus{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-offset-2:focus{
-  --tw-ring-offset-width: 2px;
-}
-
-@media (min-width: 640px){
-
-  .sm\:px-3{
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
 }
 
 @media (min-width: 768px){
@@ -1490,6 +1407,15 @@ html{
 	.md\:gap-8{
     gap: 2rem;
   }
+	.md\:gap-6{
+    gap: 1.5rem;
+  }
+	.md\:gap-4{
+    gap: 1rem;
+  }
+	.md\:gap-2{
+    gap: 0.5rem;
+  }
 	.md\:py-24{
     padding-top: 6rem;
     padding-bottom: 6rem;
@@ -1517,8 +1443,14 @@ html{
 	.lg\:mt-0{
     margin-top: 0px;
   }
+	.lg\:flex{
+    display: flex;
+  }
 	.lg\:grid{
     display: grid;
+  }
+	.lg\:hidden{
+    display: none;
   }
 	.lg\:h-20{
     height: 5rem;
