menu responsive working

--- a/public/styles.css
+++ b/public/styles.css
@@ -704,6 +704,9 @@ html{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-100), var(--tw-bg-opacity));
 }
+body{
+  position: relative;
+}
 .li-images{
   font-family: Poppins, sans-serif;
   font-size: 0.75rem;
@@ -749,6 +752,9 @@ html{
   white-space: nowrap;
   border-width: 0;
 }
+.static{
+  position: static;
+}
 .fixed{
   position: fixed;
 }
@@ -781,6 +787,9 @@ html{
 }
 .right-2{
   right: 0.5rem;
+}
+.top-12{
+  top: 3rem;
 }
 .z-30{
   z-index: 30;
@@ -838,8 +847,8 @@ html{
 .h-full{
   height: 100%;
 }
-.h-16{
-  height: 4rem;
+.h-10{
+  height: 2.5rem;
 }
 .h-8{
   height: 2rem;
@@ -847,11 +856,14 @@ html{
 .h-4{
   height: 1rem;
 }
-.h-10{
-  height: 2.5rem;
-}
 .h-6{
   height: 1.5rem;
+}
+.h-16{
+  height: 4rem;
+}
+.h-24{
+  height: 6rem;
 }
 .w-full{
   width: 100%;
@@ -905,6 +917,9 @@ html{
 }
 .gap-1{
   gap: 0.25rem;
+}
+.gap-12{
+  gap: 3rem;
 }
 .gap-3{
   gap: 0.75rem;
@@ -1153,9 +1168,9 @@ html{
   --tw-text-opacity: 1;
   color: rgba(var(--primary-500), var(--tw-text-opacity));
 }
-.text-primary-100{
+.text-primary-200{
   --tw-text-opacity: 1;
-  color: rgba(var(--primary-100), var(--tw-text-opacity));
+  color: rgba(var(--primary-200), var(--tw-text-opacity));
 }
 .text-dark-700{
   --tw-text-opacity: 1;
@@ -1177,8 +1192,9 @@ html{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-200), var(--tw-text-opacity));
 }
-.underline-offset-4{
-  text-underline-offset: 4px;
+.text-primary-100{
+  --tw-text-opacity: 1;
+  color: rgba(var(--primary-100), var(--tw-text-opacity));
 }
 .opacity-0{
   opacity: 0;
@@ -1404,17 +1420,11 @@ html{
 	.md\:items-start{
     align-items: flex-start;
   }
-	.md\:gap-8{
-    gap: 2rem;
-  }
-	.md\:gap-6{
-    gap: 1.5rem;
-  }
-	.md\:gap-4{
-    gap: 1rem;
-  }
 	.md\:gap-2{
     gap: 0.5rem;
+  }
+	.md\:gap-8{
+    gap: 2rem;
   }
 	.md\:py-24{
     padding-top: 6rem;
@@ -1455,6 +1465,9 @@ html{
 	.lg\:h-20{
     height: 5rem;
   }
+	.lg\:h-16{
+    height: 4rem;
+  }
 	.lg\:w-\[45\%\]{
     width: 45%;
   }
@@ -1467,8 +1480,14 @@ html{
 	.lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+	.lg\:flex-row{
+    flex-direction: row;
+  }
 	.lg\:items-center{
     align-items: center;
+  }
+	.lg\:justify-center{
+    justify-content: center;
   }
 	.lg\:justify-items-stretch{
     justify-items: stretch;
