--- a/public/styles.css
+++ b/public/styles.css
@@ -691,6 +691,9 @@ body{
     width: 1.25rem;
   }
 }
+.slide{
+  border-radius: 0.75rem;
+}
 .bg-gradient-red {
 		background: linear-gradient(
 			180deg,
@@ -994,10 +997,6 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--dark-100), var(--tw-bg-opacity));
 }
-.bg-primary-700{
-  --tw-bg-opacity: 1;
-  background-color: rgba(var(--primary-700), var(--tw-bg-opacity));
-}
 .bg-opacity-90{
   --tw-bg-opacity: 0.9;
 }
@@ -1036,10 +1035,6 @@ body{
 .p-6{
   padding: 1.5rem;
 }
-.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
 .py-20{
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1055,6 +1050,10 @@ body{
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 .px-6{
   padding-left: 1.5rem;
@@ -1116,6 +1115,9 @@ body{
 }
 .pt-32{
   padding-top: 8rem;
+}
+.pb-32{
+  padding-bottom: 8rem;
 }
 .text-center{
   text-align: center;
@@ -1255,6 +1257,69 @@ body{
 }
 .ease-in-out{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.swiper-wrapper {
+	/* display: flex; */
+	/* justify-content: center; */
+	/* align-items: center; */
+	/* gap: 20px; */
+}
+
+.swiper-3d,
+.swiper-3d.swiper-css-mode .swiper-wrapper {
+	/* perspective: 0; */
+	/* width: 900px; */
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.swiper-slide {
+	/* background-position: center;
+	background-size: cover; */
+	height: 400px !important;
+	width: 533px !important;
+	/* border: 1px solid red; */
+	/* width: 100%; */
+}
+
+.swiper-slide img {
+	display: block;
+	height: 400px;
+	width: 533px;
+}
+
+@media screen and (max-width: 320px) {
+	.swiper-slide {
+		height: 225px !important;
+		width: 300px !important;
+	}
+
+	.swiper-slide img {
+		display: block;
+		height: 225px !important;
+		width: 300px !important;
+	}
+}
+
+.swiper-3d .swiper-slide-shadow-right {
+	background-image: none !important;
+}
+
+.swiper-3d .swiper-slide-shadow-left {
+	background-image: none !important;
+}
+
+.swiper-pagination-bullet .swiper-pagination-bullet-active {
+	background: red !important;
+}
+
+.swiper-pagination .swiper-pagination-bullets .swiper-pagination-horizontal {
+	padding-bottom: 32px;
+}
+
+.swiper-pagination-bullet {
+	background: #f5474b !important;
 }
 
 :root {
